tests/errors/syn_class5.java
 public class syn_class5 {